--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML Album Cover</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div id="front" class="album">
-        <div id="title-box">
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+ <head>
+   <meta charset="UTF-8">
+   <title>HTML Album Cover</title>
+   <link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>
+   <div class="wrapper">
+     <div id="front" class="album">
+       <div id="title-box">
+         <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
-          <!-- Level 2 'HAPPY' Header -->
+         <!-- Level 2 'HAPPY' Header -->
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+         <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
-        </div>
-      </div>
+       </div>
+     </div>
 
-      <div id="back" class="album">
+     <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+       <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
-        <!-- Level 1 'HAPPY' Header -->
+       <!-- Level 1 'HAPPY' Header -->
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+       <!-- Level 3 'WRITTEN BY...' Header -->
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+       <!-- pararaph text 'PUBLISHED BY...' -->
+       PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+       <!-- span text 'PHARRELLWILLIAMS.COM' -->
 
-        <!-- image [columbia-logo.png] -->
+       <!-- image [columbia-logo.png] -->
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+       <!-- span text 'COLUMBIARECORDS.COM' -->
 
-        <br>
+       <br>
 
-        <!-- image [sony-logo.png] -->
+       <!-- image [sony-logo.png] -->
 
-      </div>
-    </div>
-  </body>
+     </div>
+   </div>
+ </body>
 </html>
-
